# word-debt-bot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: continuous_integration.yml  deployment.yml  linting.yml  poetry_setup.yml  pytest.yml
data/: .gitignore
src/: client.py  core.py  main.py
src/game/: __init__.py  core.py
src/journal_replay/: main.py
src/word_debt_bot/: client.py  core.py  main.py
src/word_debt_bot/cogs/: __init__.py  cmd_err_handler.py  game_commands.py
src/word_debt_bot/game/: __init__.py  core.py  journal.py  player.py  state.py
tests/: fixtures.py  test_core.py  test_err_handler.py  test_game.py  test_game_commands_cog.py  test_integration.py  test_main.py  test_sample.py  test_store.py
tests/test_data/: shop.yaml
